# Raspberry-Recorder

./: CMakeLists.txt  main.cpp
cmake_modules/: FindLibUVC.cmake
include/: ClipRecorder.h  Shell.h
src/: ClipRecorder.cpp  Shell.cpp
